structure and style
add structure to the home page, index.html, and add style across all
pages.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
   <head>
     <meta charset="UTF-8"/>
     <title></title>
+    <link rel="stylesheet" href="madStyles.css">
   </head>
   <body>
-  
+    <div class="header">
+      <h1>MadLib Generator</h1>
+    </div>
+    
+    <div class="nav">
+      <ul>
+        <li>Stories</li>
+        <ul>
+          <li onclick="">Pizza Parlor</li>
+          <li></li>
+        </ul>
+        <li><a href="#">Home</a></li>
+      </ul>
+    </div>
+    <div class="mainColumn">
+      <p>this section will be about mad libs and instructions on how to complete them.</p>
+    </div>
+    
+    <div class="footer">
+      <a href="https://www.github.com/archer77">github.com/archer77</a>
+    </div>
   </body>
   
 </html>
