import scripts and jquery

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8"/>
     <title></title>
     <link rel="stylesheet" href="madStyles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="madScripts.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="header">
@@ -16,7 +18,7 @@
       <ul>
         <li>Stories</li>
         <ul>
-          <li onclick="">Pizza Parlor</li>
+          <li>Pizza Parlor</li>
           <li></li>
         </ul>
         <li><a href="#">Home</a></li>
