--- a/madLibs.html
+++ b/madLibs.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8"/>
     <title></title>
     <link rel="stylesheet" href="madStyles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="madScripts.js" type="text/javascript"></script>
   </head>
   <body>
     
@@ -19,10 +21,10 @@
         <li><a href="index.html">Home</a></li>
       </ul>
     </div>
-    <div class="altColumn">
+    <div class="altColumn" id="getWords">
       get the user to enter words here
     </div>
-    <div class="altColumn">
+    <div class="altColumn" id="displayLib">
       show the mad lib after the user has entered all the words and pushed a button
     </div>
     
