add mad lib logo, with a link to the creator's website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </head>
   <body>
     <div class="header">
-      <h1>MadLib Generator</h1>
+      <a href="http://www.madlibs.com/"><img src="MadLibs-Logo.png" alt="Mad Libs Logo"/></a>
+      <h1>Mad Lib Generator</h1>
     </div>
     
     <div class="nav">
@@ -19,13 +20,15 @@
         <li>Stories</li>
         <ul>
           <li>Pizza Parlor</li>
-          <li></li>
         </ul>
         <li><a href="#">Home</a></li>
       </ul>
     </div>
     <div class="mainColumn">
-      <p>this section will be about mad libs and instructions on how to complete them.</p>
+      <h3>About</h3>
+      <p>Mad libs&#8482;, invented in 1953 by <a href="https://en.wikipedia.org/wiki/Leonard_B._Stern">Leonard Stern</a> and <a href="https://en.wikipedia.org/wiki/Roger_Price_(comedian)">Roger Price</a>, is a phrasal template word game where one player prompts others for a list of words to substitute for blanks in a story, before reading the – often comical or nonsensical – story aloud.</p>
+      <h3>How to Play</h3>
+      <p>You, as the player, give us the words that we ask for and we will fill them into the story for you to read. Choose a story on the left to begin.</p>
     </div>
     
     <div class="footer">
