change format for story storage
and add a new story "Letter From Home"

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li>Stories</li>
         <ul>
           <li>Pizza Parlor</li>
+          <li>Letter From Camp</li>
         </ul>
         <li><a href="#">Home</a></li>
       </ul>
