add logo to 2nd page
import storage, add story to nav.

--- a/madLibs.html
+++ b/madLibs.html
@@ -7,16 +7,20 @@
     <title></title>
     <link rel="stylesheet" href="madStyles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="madLibsStore.js" type="text/javascript"></script>
     <script src="madScripts.js" type="text/javascript"></script>
   </head>
   <body>
-    
+    <div class="header">
+      <a href="http://www.madlibs.com/"><img src="MadLibs-Logo.png" alt="Mad Libs Logo"/></a>
+      <h1>Mad Lib Generator</h1>
+    </div>
     <div class="nav">
       <ul>
         <li>Stories</li>
         <ul>
-          <li>Pizza Parlor</li>
-          <li></li>
+          <li>Pizza Parlor</li> <!--Later make this fill in, according to what is in madLibsStore.js-->
+          <li>Letter From Home</li>
         </ul>
         <li><a href="index.html">Home</a></li>
       </ul>
