--- a/index.html
+++ b/index.html
@@ -7,23 +7,15 @@
     <title></title>
     <link rel="stylesheet" href="madStyles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="madLibsStore.js" type="text/javascript"></script>
     <script src="madScripts.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="header">
       <a href="http://www.madlibs.com/"><img src="MadLibs-Logo.png" alt="Mad Libs Logo"/></a>
-      <h1>Mad Lib Generator</h1>
+      <h1>Mad Lib&#8482; Generator</h1>
     </div>
-    
-    <div class="nav">
-      <ul>
-        <li>Stories</li>
-        <ul>
-          <li>Pizza Parlor</li>
-          <li>Letter From Camp</li>
-        </ul>
-        <li><a href="#">Home</a></li>
-      </ul>
+    <div id="nav">
     </div>
     <div class="mainColumn">
       <h3>About</h3>
