--- a/madLibs.html
+++ b/madLibs.html
@@ -15,15 +15,7 @@
       <a href="http://www.madlibs.com/"><img src="MadLibs-Logo.png" alt="Mad Libs Logo"/></a>
       <h1>Mad Lib Generator</h1>
     </div>
-    <div class="nav">
-      <ul>
-        <li>Stories</li>
-        <ul>
-          <li>Pizza Parlor</li> <!--Later make this fill in, according to what is in madLibsStore.js-->
-          <li>Letter From Home</li>
-        </ul>
-        <li><a href="index.html">Home</a></li>
-      </ul>
+    <div id="nav">
     </div>
     <div class="altColumn" id="getWords">
     </div>
