change title based on story selected

--- a/madLibs.html
+++ b/madLibs.html
@@ -13,7 +13,7 @@
   <body>
     <div class="header">
       <a href="http://www.madlibs.com/"><img src="MadLibs-Logo.png" alt="Mad Libs Logo"/></a>
-      <h1>Mad Lib Generator</h1>
+      <h1 id="title">Mad Lib Generator</h1>
     </div>
     <div id="nav">
     </div>
